<resources>
    <string name="app_name">Book your coffee</string>
    <string name="your_name">Your name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="sub">-</string>
    <string name="initial_value">0</string>
    <string name="add">+</string>
    <string name="order_summary_email_subject">Coffee Order</string>
    <string name="order_summary_name">Name:</string>
    <string name="order_summary_whipped_cream">Whipped Cream</string>
</resources>
