<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:focusableInTouchMode="true"
    android:focusedByDefault="true"
    tools:context=".CoffeeActivity">
    <ImageView
        android:id="@+id/imageOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/buy"
        android:layout_marginRight="25dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:gravity="center"
            tools:ignore="Autofill"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_marginStart="10sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:layout_marginLeft="10sp" />
        <CheckBox
            android:layout_marginTop="20dp"
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:text="@string/whipped_cream"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:paddingLeft="20dp" />
        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="24dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/chocolate"
            android:textSize="18sp" />
        <TextView
            android:layout_marginTop="50dp"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_marginLeft="10dp" />
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">
            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:onClick="decrement"
                android:textColor="#fff"
                android:textSize="16sp"
                android:background="#00BFA5"
                android:text="@string/sub" />
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textStyle="bold"
                android:text="@string/initial_value"
                android:textSize="20sp" />
            <Button
                android:background="#00BFA5"
                android:layout_width="45dp"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_height="45dp"
                android:onClick="increment"
                android:text="@string/add" />
        </LinearLayout>
        <Button
            android:background="#00BFA5"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="submitOrder"
            android:text="Order" />
    </LinearLayout>
</RelativeLayout>